# TexWelder

./: .gitignore  BUILDINSTRUCTIONS.md  CMakeLists.txt  LICENSE  README.md  toolchain-mingw64.cmake
src/: build.bash  drawhelpers.h  main.cpp
src/classes/: extramenus.cpp  extramenus.h  node.cpp  node.h  paramwidgets.cpp  paramwidgets.h  structs.cpp  structs.h
src/extras/: importantmenus.h
src/nodes/input/: color.h  value.h
src/nodes/math/: add.h  divide.h  makeBW.h  mix.h  multiply.h  smoothstep.h  subtract.h
src/nodes/output/: shownode.h
src/nodes/procedrual/: perlinnoise.h  voronoi.h
src/nodes/shaders/: add.fs  color.fs  divide.fs  makeBW.fs  mix.fs  multiply.fs  perlinnoise.fs  smoothstep.fs  subtract.fs  value.fs  voronoi.fs
